components/ua/user-establishment-details/overlays/prod-v5/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: user-establishment-details-backendtrafficpolicy
  namespace: apps
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: user-establishment-details
  timeout:
    http:
      connectionIdleTimeout: 60s
      maxConnectionDuration: 300s
      requestTimeout: 120s
